<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/draw_insets_frame_layout"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:maxWidth="@dimen/detail_card_max_width">

        <net.coronite.johnandrewred.ui.ThreeTwoImageView
            android:id="@+id/photo"
            android:src="@drawable/signaturewhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter" />

        <ImageView
            android:id="@+id/album_image_view"
            android:layout_width="148dp"
            android:layout_height="148dp"
            android:layout_marginTop="-60dp"
            android:layout_gravity="center_horizontal"
            android:elevation="8dp" tools:targetApi="21"
            android:contentDescription="@string/album_image"/>

        <!-- metabar -->
        <LinearLayout
            android:id="@+id/meta_bar"
            android:layout_marginTop="-60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/material_gray_900"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:paddingLeft="@dimen/detail_inner_horiz_margin"
            android:paddingRight="@dimen/detail_inner_horiz_margin"
            android:paddingTop="@dimen/detail_metabar_vert_padding"
            android:paddingBottom="@dimen/detail_metabar_vert_padding"
            android:layout_marginBottom="@dimen/detail_metabar_vert_padding"
            android:gravity="center">

                    <TextView
                        android:id="@+id/article_title"
                        android:layout_marginTop="50dp"
                        style="?android:attr/textAppearanceLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/detail_metabar_title_bottom_padding"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        android:textSize="@dimen/detail_title_text_size"
                        android:lineSpacingMultiplier="0.9"
                        android:text="@string/john_andrew_red"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/website_textview"
                        style="?android:attr/textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#8fff"
                        android:text="@string/website"/>

                    <!-- Social Media List -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_margin="6dp"
                                android:src="@drawable/facebook"
                                android:contentDescription="@string/fb_icon_desc"/>

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_margin="6dp"
                                android:src="@drawable/twitter"
                                android:contentDescription="@string/twitter_icon_desc"/>

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_margin="6dp"
                                android:src="@drawable/youtube"
                                android:contentDescription="@string/youtube_icon_desc"/>

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_margin="6dp"
                                android:src="@drawable/instagram"
                                android:contentDescription="@string/instagram_icon_desc"/>
                    </LinearLayout>

                </LinearLayout>

        <!-- member 1-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/member_1"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_margin="12dp"
                android:contentDescription="@string/band_mem_img"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/member_name1"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textColorLink="@color/colorAccent"
                    android:textSize="@dimen/detail_body_text_size"
                    android:text="@string/juan_rojo"
                    android:textStyle="normal|bold" />
                <TextView
                    android:id="@+id/member_description1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textColorLink="@color/colorAccent"
                    android:textSize="18sp"
                    android:text="@string/mem_one_bio" />

            </LinearLayout>
        </LinearLayout>

        <!-- member 2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/member_2"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_margin="12dp"
                android:contentDescription="@string/band_mem_img"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/member_name2"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textColorLink="@color/colorAccent"
                    android:textSize="@dimen/detail_body_text_size"
                    android:text="@string/juan_rojo"/>
                <TextView
                    android:id="@+id/member_description2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textColorLink="@color/colorAccent"
                    android:textSize="18sp"
                    android:text="@string/mem_one_bio" />

            </LinearLayout>
        </LinearLayout>

        <!-- member 3 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/member_3"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_margin="12dp"
                android:contentDescription="@string/band_mem_img"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/member_name3"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textColorLink="@color/colorAccent"
                    android:textSize="@dimen/detail_body_text_size"
                    android:text="@string/member_name"/>

                <TextView
                    android:id="@+id/member_description3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textColorLink="@color/colorAccent"
                    android:textSize="18sp"
                    android:text="@string/lorem" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>